[package]
name = "rocker"
version = "0.1.0"
authors = ["daikimiura <daikiii5555@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.2"
nix = "0.19.1"
rtnetlink ="0.7.0"
futures = "0.3.12"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
rand = "0.8.0"
ipnetwork = "*"
hex = "0.4"
dkregistry =  { git = "https://github.com/daikimiura/dkregistry-rs.git", branch = "update-tokio-1.0" }
flate2 = "1.0"
tar = "0.4"
openssl = { version = "*", features = ["vendored"] }
once_cell = "1.7.2"
sled = "0.34.6"
dbus = "0.9.2"
regex = "1"
